Correção dos erros do código